infra/k8s-prod/ingress-srv.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ingress-nginx
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.ticketing.gq'
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
  rules:
    - host: www.ticketing.gq
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-service
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-service
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-service
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
